--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -48,7 +48,8 @@
                 </ul>
                 
                 <div id="login" class="form-action show">
-                    <form style="width:105%">
+                    <form action="" method="post" style="width:105%">
+                        {% csrf_token %}
                         <ul>
                             <li >
                                 <input class="form-control input-lg" type="text" placeholder="Username" />
@@ -64,7 +65,8 @@
                 </div>
                 <!--/#login.form-action-->
                 <div id="register" class="form-action hide">
-                    <form>
+                    <form action="" method="post" style="width:105%">
+                        {% csrf_token %}
                         <ul>
                             <li>
                                 <input class="form-control input-sm" type="text" placeholder="Username" />
