--- a/question/templates/question/signinup.html
+++ b/question/templates/question/signinup.html
@@ -15,8 +15,9 @@
 
     <!-- CSS
   ================================================== -->
-    <link rel="stylesheet" href="{% static 'home/bootstrap-3.3.7/css/bootstrap.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'home/main.css' %}">
+    <link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'common/main.css' %}">
 
     <!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -52,7 +53,7 @@
                         {% csrf_token %}
                         <ul>
                             <li >
-                                <input class="form-control input-lg" type="text" placeholder="用户名" name="signin_name"/>
+                                <input class="form-control input-lg" type="text" placeholder="邮箱或手机号" name="email_phone"/>
                             </li>
                             <li>
                                 <input class="form-control input-lg" type="password" placeholder="密码" name="password"/>
@@ -65,14 +66,14 @@
                 </div>
                 <!--/#login.form-action-->
                 <div id="signup" class="form-action hide">
-                    <form action="" method="post" style="width:105%">
+                    <form action="" method="post" style="width:105%" onsubmit="return checkValid()">
                         {% csrf_token %}
                         <ul>
                             <li>
-                                <input class="form-control input-lg" type="text" placeholder="用户名" name="signup_name"/>
+                                <input class="form-control input-lg" type="text" placeholder="邮箱或手机号" name="email_phone"/>
                             </li>
                             <li>
-                                <input class="form-control input-lg" type="text" placeholder="邮箱或手机号" name="email"/>
+                                <input class="form-control input-lg" type="text" placeholder="昵称" name="nickname"/>
                             </li>
                             <li>
                                 <input class="form-control input-lg" type="password" placeholder="密码" name="password"/>
@@ -89,9 +90,11 @@
         
 
     </div>
-    <script class="cssdeck" src="{%static 'login/jquery.js' %}"></script>
-    <script src="{% static 'home/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
-	<script src="{% static 'home/main.js' %}"></script>
+    
+    <script class="cssdeck" src="{%static 'common/jquery.js' %}"></script>
+    <script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
+    <script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script>
+	<script src="{% static 'common/main.js' %}"></script>
 </body>
 </html>
 
