--- a/question/templates/question/t_topic.html
+++ b/question/templates/question/t_topic.html
@@ -3,8 +3,9 @@
 <head>
     {%load static %}
     <meta charset="utf-8"> 
-    <link rel="stylesheet" href="{% static 'home/bootstrap-3.3.7/css/bootstrap.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'home/main.css' %}">
+    <link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'common/main.css' %}">
 </head>
 <body>
 
@@ -116,9 +117,10 @@
 	</div><!-- /.modal -->
 </div>
 <!--- div other--->
-    <script class="cssdeck" src="{%static 'login/jquery.js' %}"></script>
-    <script src="{% static 'home/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
-	<script src="{% static 'home/main.js' %}"></script>
+    <script class="cssdeck" src="{%static 'common/jquery.js' %}"></script>
+    <script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
+    <script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script>
+	<script src="{% static 'common/main.js' %}"></script>
 
 </body>
 
