--- a/static/common/main.css
+++ b/static/common/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:100);
+#@import url(http://fonts.googleapis.com/css?family=Roboto:100);
 @import url(http://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css);
 
 body {
@@ -6,7 +6,7 @@ body {
   background-color:#f3f3f3;
   background-repeat:no-repeat;
   color: black;
-  font-family: 'Roboto';
+  #font-family: 'Roboto';
 }
 .flat-form-nouse {
   background: #6a6a6a;
@@ -14,7 +14,7 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-  font-family: 'Roboto';
+  #font-family: 'Roboto';
 }
 .flat-form {
   #background: #6a6a6a;
@@ -149,7 +149,7 @@ form {
 form input[type=text],
 form input[type=password],
 form input[type=submit] {
-  font-family: 'Roboto';
+  #font-family: 'Roboto';
 }
 
 form input[type=text],
@@ -253,5 +253,6 @@ form input[type=password] {
     #border-color:#000;
     #border-style:solid; 
     #border-width:1px; 
+    word-wrap:break-word;
     background-color:#ffffff;
 }
