--- a/question/templates/question/index.html
+++ b/question/templates/question/index.html
@@ -10,7 +10,8 @@
 <body>
 
 <div class="container">
-<header role="banner" data-za-module="TopNavBar" >
+<header  role="banner" data-za-module="TopNavBar" >
+<div class="Banner"></div>
 <!-- react-empty: 1220 -->
 <div class="row">
 <div class="col-md-1">
@@ -72,7 +73,7 @@
         <div class="QuestionFrame font-black">
             <div>来自话题:python</div>
             <div>
-            <a href="{{ question.id }}/">{{ question.title }}</a>
+            <a href="/question/{{ question.id }}/">{{ question.title }}</a>
             </div>
             <div>我是作者</div>
             <div>这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案这部分是答案</div>
