--- a/static/common/main.css
+++ b/static/common/main.css
@@ -1,12 +1,11 @@
-#@import url(http://fonts.googleapis.com/css?family=Roboto:100);
-@import url(http://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css);
+/*@import url(http://fonts.googleapis.com/css?family=Roboto:100);*/
+/*@import url(http://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css);*/
 
 body {
-  #background: url(timg.jpg);
+  /*background: url(timg.jpg);*/
   background-color:#f3f3f3;
   background-repeat:no-repeat;
   color: black;
-  #font-family: 'Roboto';
 }
 .flat-form-nouse {
   background: #6a6a6a;
@@ -14,16 +13,14 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-  #font-family: 'Roboto';
 }
 .flat-form {
-  #background: #6a6a6a;
-  padding: 3% 1% 3% 3%;
+  /*background: #6a6a6a;
   #margin: 0;
   #width: 100%;
   #height: 100%;
-  #position: relative;
-  #font-family: 'Roboto';
+  #position: relative;*/
+  padding: 3% 1% 3% 3%;
 }
 .banner{
   line-height:64px;
@@ -60,16 +57,16 @@ body {
 }
 
 .tabs li {
-  #background-color: #222222;
+  /*background-color: #222222;*/
   display: block;
   float: left;
   margin: 0;
   width: 100%;
   text-align: center;
-  #padding: 0px 0px 0px 22px;
+  /*padding: 0px 0px 0px 22px;*/
 }
 .tabs-nouse a {
-#  background: #c0392b;
+/*background: #c0392b;*/
   display: block;
   float: left;
   text-decoration: none;
@@ -81,27 +78,29 @@ body {
 
 }
 .tabs a {
+      /*
   #background: #c0392b;
   #display: block;
   #float: left;
   #text-decoration: none;
+  #padding: 12px 22px 12px 22px;
+  border-right: 1px solid @tab-border;
+  */
   color: grey;
   text-align: center;
   font-size: 24px;
-  #padding: 12px 22px 12px 22px;
-  /*border-right: 1px solid @tab-border;*/
 
 }
 .tabs-nouse li:last-child a {
   border-right: none;
-  #padding-left: 0;
-  #padding-right: 0;
+  /*padding-left: 0;*/
+  /*padding-right: 0;*/
   text-align: center;
 }
 .tabs li:last-child  a {
   border-right: none;
-  #padding-left: 0;
-  #padding-right: 0;
+  /*padding-left: 0;*/
+  /*padding-right: 0;*/
   text-align: left;
 }
 .tabs-nouse a.active {
@@ -112,7 +111,7 @@ body {
 	transition: all 0.5s linear;
 }
 .tabs a.active {
-  #background: #5cb85c;
+  /*background: #5cb85c;*/
   width:100%;
   color: green;
   border-right: none;
@@ -121,7 +120,7 @@ body {
 	transition: all 0.5s linear;
 }
 .tabs a:hover {
-  #background: #5cb85c;
+  /*background: #5cb85c;*/
   width:100%;
   color: black;
   border-right: none;
@@ -149,7 +148,6 @@ form {
 form input[type=text],
 form input[type=password],
 form input[type=submit] {
-  #font-family: 'Roboto';
 }
 
 form input[type=text],
@@ -243,16 +241,32 @@ form input[type=password] {
     text-align:center;
 }
 .QuestionFrame{
-    #border-color:#000;
-    #border-style:solid; 
-    #border-width:1px; 
+    /*
+    border-color:#000;
+    border-style:solid; 
+    border-width:1px; 
+    */
     background-color:#ffffff;
 }
 
 .AnswerFrame{
-    #border-color:#000;
-    #border-style:solid; 
-    #border-width:1px; 
+    /*
+    border-color:#000;
+    border-style:solid; 
+    border-width:1px;
+    */
     word-wrap:break-word;
+    background-color:#ffffff;
+}
+.Banner{
+    /*
+    border-color:#000;
+    border-style:solid; 
+    border-width:1px;
+    */
+    height:60px;
+    position: absolute;
+    left: 0;
+    right:0;
     background-color:#ffffff;
 }
