--- a/question/templates/question/signinup.html
+++ b/question/templates/question/signinup.html
@@ -16,7 +16,7 @@
     <!-- CSS
   ================================================== -->
     <link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
+    <!--<link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">-->
     <link rel="stylesheet" type="text/css" href="{% static 'common/main.css' %}">
 
     <!--[if lt IE 9]>
@@ -93,7 +93,7 @@
     
     <script class="cssdeck" src="{%static 'common/jquery.js' %}"></script>
     <script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
-    <script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script>
+    <!--<script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script-->
 	<script src="{% static 'common/main.js' %}"></script>
 </body>
 </html>
