--- a/question/templates/question/index.html
+++ b/question/templates/question/index.html
@@ -66,9 +66,8 @@
 
         <!--------------------main---------------------->
         <main role="main">
-        <div id="QuestionItems">
         <div class="row">
-        <div class="col-md-8">
+        <div id="QuestionItems" class="col-md-8">
         {% if latest_question_list %}
             {% for question in latest_question_list %}
         <div class="QuestionFrame font-black">
@@ -83,7 +82,6 @@
         <div>&nbsp;</div>
             {% endfor %}
         {% endif %}
-        </div>
         </div>
         </div>
         </main>
@@ -195,6 +193,74 @@ $('#topics_select').on('changed.bs.select', function (e) {
   // do something...
   //alert("changed.bs.select");
 });
+
+
+    //获取滚动条当前的位置 
+function getScrollTop() { 
+var scrollTop = 0; 
+if (document.documentElement && document.documentElement.scrollTop) { 
+scrollTop = document.documentElement.scrollTop; 
+} 
+else if (document.body) { 
+scrollTop = document.body.scrollTop; 
+} 
+return scrollTop; 
+} 
+
+//获取当前可是范围的高度 
+function getClientHeight() { 
+var clientHeight = 0; 
+if (document.body.clientHeight && document.documentElement.clientHeight) { 
+clientHeight = Math.min(document.body.clientHeight, document.documentElement.clientHeight); 
+} 
+else { 
+clientHeight = Math.max(document.body.clientHeight, document.documentElement.clientHeight); 
+} 
+return clientHeight; 
+} 
+
+//获取文档完整的高度 
+function getScrollHeight() { 
+return Math.max(document.body.scrollHeight, document.documentElement.scrollHeight); 
+} 
+
+function appendElement(ret)
+{
+    for(i in ret)
+    {
+    var htmlText='\
+        <div class="QuestionFrame font-black">\
+        <div>来自话题:python</div>\
+             <a href="/question/'+ret[i][0]+'/">'+ret[i][1]+'</a>\
+        </div>\
+        <div>我是作者</div>\
+        <div>这部分是答案这部分是答案这部分是答案</div>\
+        </div>\
+        <div>&nbsp;</div>\
+    ';
+    $('#QuestionItems').append(htmlText);
+    }
+}
+
+//获取文档完整的高度 
+function getMoreData() { 
+    nums=$('.QuestionFrame').length;
+    order=1;//pub_date
+    start=nums;
+    end=start+2;
+    $.post('/ajax/questions/'+order+'/'+start+'/'+end+'/',function(ret){          
+            appendElement(ret)       
+    });
+} 
+
+
+window.onscroll = function () { 
+if (getScrollTop() + getClientHeight() == getScrollHeight()) { 
+getMoreData(); 
+//alert("xxxx");
+} 
+} 
+
     </script>
 
 </body>
