--- a/question/templates/question/t_mytopic.html
+++ b/question/templates/question/t_mytopic.html
@@ -67,40 +67,23 @@
         <main role="main">
         
 
+        <div id="MyTopicItems">
         <div class="row">
-        
-        <div class="TheQuestion col-md-8">
-        <div>{{ context_question.id }},{{ context_question.title }}</div>
-        <div>提问者：{{ context_question.quizzer.username }}</div>
-        </div>
-        
-        <div id="AnswerItems">
         <div class="col-md-8">
-        {% for answer in context_question.answer_set.all %}
-        <div class="AnswerFrame font-black">
-            <div>{{ answer.content|safe }}</div>
-            <div>回答者：{{answer.author.username}}</div>
+        {% if mytopic_list %}
+            {% for topic in mytopic_list %}
+        <div class="MyTopicFrame font-black">
+            <div>
+            <a href="/topic/{{ topic.id }}/" data-topic-id="{{ topic.id }}">{{ topic.name }}</a>
+            </div>
+            <!--<button class="btn btn-success" style="display:none">取消关注</button>-->
         </div>
         
         <div>&nbsp;</div>
-        {% endfor %}
+            {% endfor %}
+        {% endif %}
         </div>
-        </div>
-        
-        <div class="AnswerToolbar col-md-8">
-        <form action="/question/{{ context_question.id }}/" method="post">
-        {% csrf_token %}
-            <textarea id="summernote" name="content" rows1="5" cols1="70" maxlength1="160" placeholder="写回答..."></textarea>
-            <!--<div id="summernote" name="content"><p>Hello Summernote</p></div>-->
-        	<button type="submit"  class="btn btn-success btn-lg">
-				提交回答
-			</button>
-        </form>
-        </div>
-        
-        </div>
-        
-        
+
         </main>
         <!--------------------main end-------------------->
 
@@ -149,6 +132,8 @@
         placeholder:'写回答...'
         });
     });
+    
+
   </script>
 </body>
 
